force-app/main/default/objects/Quote_Document_Watched_Field__mdt/Quote_Document_Watched_Field__mdt.object-meta.xml
<CustomObject>
    <description
  >Subscriber-owned direct Quote fields that affect document output and must participate in staleness and fingerprint checks.</description>
    <label>Quote Document Watched Field</label>
    <pluralLabel>Quote Document Watched Fields</pluralLabel>
</CustomObject>