force-app/main/default/objects/Quote_Document_Watched_Field__mdt/fields/Field_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Field_API_Name__c</fullName>
    <description
  >Direct SBQQ__Quote__c field API name. Relationship paths are not supported because a related-record edit does not run the Quote trigger.</description>
    <label>Field API Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>