force-app/main/default/objects/Quote_Document_Watched_Field__mdt/fields/Version__c.field-meta.xml
<CustomField>
    <fullName>Version__c</fullName>
    <description
  >Bump when the subscriber interpretation of this field changes. The version is included in the document fingerprint.</description>
    <label>Version</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>